# textuanki

./: .gitignore  COMPLETE.txt  DEMO.md  DEPLOYMENT_COMPLETE.md  FEATURES.md  FIXED.txt  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  START_HERE.md  add_sample_data.py  agent.md  pyproject.toml  run.sh  test_basic.py
src/: app.py  banners.py  main.py
src/database/: db.py
src/models/: card.py  deck.py  review.py
src/screens/: browse.py  create_card.py  dashboard.py  deck_manager.py  study.py
